More work on separating POST request from motion creating/updating logic
